force-app/main/default/objects/RD_Test_Code__c/RD_Test_Code__c.object-meta.xml
<CustomObject>
    <label>RD Test Code</label>
    <nameField>
        <label>RD Test Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD Test Code</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>