force-app/main/default/objects/RD_Test_Code__c/fields/DiscTest__c.field-meta.xml
<CustomField>
    <fullName>DiscTest__c</fullName>
    <label>DiscTest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>