force-app/main/default/objects/RD_Test_Code__c/fields/HandSuptTest__c.field-meta.xml
<CustomField>
    <fullName>HandSuptTest__c</fullName>
    <label>HandSuptTest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>