force-app/main/default/objects/RD_Test_Code__c/fields/HolderInlTest__c.field-meta.xml
<CustomField>
    <fullName>HolderInlTest__c</fullName>
    <label>HolderInlTest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>