force-app/main/default/objects/RD_Test_Code__c/fields/HolderRingTest__c.field-meta.xml
<CustomField>
    <fullName>HolderRingTest__c</fullName>
    <label>HolderRingTest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>