force-app/main/default/objects/RD_Test_Code__c/fields/ILinerTest__c.field-meta.xml
<CustomField>
    <fullName>ILinerTest__c</fullName>
    <label>ILinerTest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>