force-app/main/default/objects/RD_Test_Code__c/fields/MSealTest__c.field-meta.xml
<CustomField>
    <fullName>MSealTest__c</fullName>
    <label>MSealTest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>