force-app/main/default/objects/RD_Test_Code__c/fields/OLinerTest__c.field-meta.xml
<CustomField>
    <fullName>OLinerTest__c</fullName>
    <label>OLinerTest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>