force-app/main/default/objects/RD_Test_Code__c/fields/ORingTest__c.field-meta.xml
<CustomField>
    <fullName>ORingTest__c</fullName>
    <label>ORingTest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>