force-app/main/default/objects/RD_Test_Code__c/fields/Shell_Test__c.field-meta.xml
<CustomField>
    <fullName>Shell_Test__c</fullName>
    <label>Shell Test</label>
    <length>255</length>
    <type>Text</type>
</CustomField>