force-app/main/default/objects/RD_Test_Code__c/fields/SlotCoverStripsTest__c.field-meta.xml
<CustomField>
    <fullName>SlotCoverStripsTest__c</fullName>
    <label>SlotCoverStripsTest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>