force-app/main/default/objects/RD_Test_Code__c/fields/TopSectTest__c.field-meta.xml
<CustomField>
    <fullName>TopSectTest__c</fullName>
    <label>TopSectTest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>