force-app/main/default/objects/RD_Test_Code__c/fields/TSORingTest__c.field-meta.xml
<CustomField>
    <fullName>TSORingTest__c</fullName>
    <label>TSORingTest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>