force-app/main/default/objects/RD_Test_Code__c/fields/VacSuptTest__c.field-meta.xml
<CustomField>
    <fullName>VacSuptTest__c</fullName>
    <label>VacSuptTest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>