force-app/main/default/objects/RD_Test_Code__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>NACE__c</columns>
    <columns>PTC__c</columns>
    <columns>Shell_Test__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>